# demand-optimizer

./: .gitignore  DESIGN_DOCUMENT.md  PRD.md  README.md  TASKS.md  TECH_STACH.md
backend/: equiproute.db  pyproject.toml
backend/app/: main.py  seed.py
backend/app/models/: __init__.py  base.py  inventory.py  job.py  student.py
backend/app/routes/: __init__.py  inventory.py  optimize.py  picking.py  schools.py  students.py  upload.py
backend/app/schemas/: __init__.py  inventory.py  job.py  picking.py  school.py  student.py
backend/app/solver/: __init__.py  demand.py  optimizer.py
backend/equiproute_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_solver.py
mobile/: app.json  global.css  package-lock.json  package.json
mobile/app/: _layout.tsx
mobile/app/(tabs)/: _layout.tsx  index.tsx  inventory.tsx  schools.tsx  upload.tsx  warehouse.tsx
mobile/components/: BarcodeScanner.tsx  GlobalHealthBar.tsx  LanguageToggle.tsx  OptimizeFAB.tsx  SchoolCard.tsx  SkuGauge.tsx  StatusCards.tsx
mobile/constants/: Colors.ts
mobile/context/: AppContext.tsx
mobile/lib/: api.ts  i18n.ts  types.ts
mobile/locales/: en.json  es.json
