[project]
name = "equiproute-backend"
version = "0.1.0"
description = "EquipRoute Distribution Optimizer — Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "ortools>=9.11",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
]
